--- a/src/app/components/sign-up/sign-up.component.css
+++ b/src/app/components/sign-up/sign-up.component.css
@@ -1,11 +1,11 @@
-.sign-in-container {
+.sign-up-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
   }
-
-  .sign-in-form {
+  
+  .sign-up-form {
     width: 350px;
     padding: 20px;
     border-radius: 10px;
@@ -13,7 +13,7 @@
     background-color: grey;
   }
 
-  #sign-up-route {
+  #sign-in-route {
     display: flex;
     margin-bottom: 20px;
     justify-content: right;
@@ -22,10 +22,10 @@
   
   a:link {color: #fff}  
   a:visited {color: #fff}  
-
+  
   h2 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: #007bff;
   }
   
@@ -77,7 +77,7 @@
   }
   /* Add media query to make the form responsive on smaller screens */
   @media (max-width: 480px) {
-    .sign-in-form {
+    .sign-up-form {
       width: 100%;
     }
   }
