seperation of classes & add contact form

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,11 @@
 <div class="sign-in-container">
     <form class="sign-in-form" (ngSubmit)="login()" #ngSignForm="ngForm">
       <div id="sign-up-route">
+        <a routerLink="chat">
+        Chat
+        </a>
+      </div>
+      <div id="sign-up-route">
         <a routerLink="signup">
         Sign Up
         </a>
