--- a/src/app/components/members/members.component.css
+++ b/src/app/components/members/members.component.css
@@ -11,12 +11,10 @@ aside{
     /* padding:30px 20px; */
     height: 10%;
   }
-  aside input{
+  /* aside input{
     margin: 10px 0 0 10px;
     width:90%;
-    /* height:100%; */
     line-height:60px;
-    /* padding-left:5px; */
     background-color:#5e616a;
     border:none;
     border-radius:10px;
@@ -25,10 +23,10 @@ aside{
     background-repeat:no-repeat;
     background-position:95%;
     background-size:40px;
-  }
-  aside input::placeholder{
+  } */
+  /* aside input::placeholder{
     color:#fff;
-  }
+  } */
   aside ul{
     padding-left:0;
     margin:0;
@@ -43,13 +41,16 @@ aside{
   aside li:hover{
     background-color:#5e616a;
   }
-  h2,h3{
+  /* h2,h3{
     margin:0;
   }
   aside li img{
     border-radius:50%;
     margin-left:20px;
     margin-right:8px;
+    width:20%;
+    background-color: white;
+    min-width: 20%;
   }
   aside li div{
     display:inline-block;
@@ -66,4 +67,4 @@ aside{
     font-size:12px;
     color:#7e818a;
     font-weight:normal;
-  }
+  } */
