--- a/src/app/components/messages/messages.component.css
+++ b/src/app/components/messages/messages.component.css
@@ -33,7 +33,9 @@ main{
   }
 
   main header img:first-child{
+    width: 5%;
     border-radius:50%;
+    background-color: white;
   }
   main header div{
     margin-left:10px;
@@ -44,49 +46,16 @@ main{
     /* margin-bottom:5px; */
   }
   
-  #chat{
-    padding-left:0;
-    margin:0;
-    list-style-type:none;
-    overflow-y:scroll;
-    height:80%;
-    border-top:2px solid #fff;
-    border-bottom:2px solid #fff;
-  }
-  #chat li{
-    padding:10px 30px;
+  .chat{
+      padding-left:0;
+      margin:0;
+      list-style-type:none;
+      overflow-y:scroll;
+      height:80%;
+      border-top:2px solid #fff;
+      border-bottom:2px solid #fff;
+    }
 
-  }
-  #chat h2,#chat h3{
-    display:inline-block;
-    font-size:13px;
-    font-weight:normal;
-  }
-  #chat h3{
-    margin-left: 5px;
-    color:black;
-  }
-  #chat .entete{
-    /* margin-bottom:5px; */
-  }
-  #chat .message{
-    padding:20px;
-    color:#fff;
-    line-height:25px;
-    max-width:90%;
-    display:inline-block;
-    text-align:left;
-    border-radius:5px;
-  }
-  #chat .me{
-    text-align:right;
-  }
-  #chat .you .message{
-    background-color:#58b666;
-  }
-  #chat .me .message{
-    background-color:#6fbced;
-  }
   main footer{
     display: flex;
     height:10%;
