--- a/src/app/components/message/message.component.html
+++ b/src/app/components/message/message.component.html
@@ -1,10 +1,10 @@
-<div class="message" class="{{ message.sender=='me' ? 'me' : 'you' }}">
+<div class="message" class="me">
   <div class="entete">
     <span class="status green"></span>
-    <h2>{{ message.sender }}</h2>
+    <!-- <h2>{{ message.sender }}</h2> -->
     <h3>10:12AM, Today</h3>
   </div>
   <div class="message-text">
-    {{ message.message }}
+    {{ message.content }}
   </div>
 </div>
