--- a/src/app/components/chat-app/chat-app.component.html
+++ b/src/app/components/chat-app/chat-app.component.html
@@ -11,5 +11,8 @@
             class="messages"
         ></app-messages>
     </div>
-    <app-add-contact class="add-member"></app-add-contact>
+    <div class="right-side">
+        <app-add-contact class="add-contact"></app-add-contact>
+        <app-options class="opt"></app-options>
+    </div>
 </div>
