--- a/src/app/components/message/message.component.css
+++ b/src/app/components/message/message.component.css
@@ -3,22 +3,18 @@
     padding:10px 30px;
 
   }
-  h2, h3{
-    display:inline-block;
-    font-size:13px;
+ h3{
+    font-size:12px;
     font-weight:normal;
-  }
-  h3{
-    margin-left: 5px;
     color:black;
+        margin-bottom: 5px;
+    margin-left: 2px;
+    text-align: right;
   }
-  .entete{
-    /* margin-bottom:5px; */
-  }
-  .message-text{
-    padding:20px;
+  .message-box{
+    padding:5px;
     color:#fff;
-    line-height:25px;
+    /* line-height:25px; */
     max-width:90%;
     display:inline-block;
     text-align:left;
@@ -27,9 +23,9 @@
   .me{
     text-align:right;
   }
-  .you .message-text{
+  .you .message-box{
     background-color:#58b666;
   }
-  .me .message-text{
+  .me .message-box{
     background-color:#6fbced;
   }
