--- a/src/app/components/messages/messages.component.html
+++ b/src/app/components/messages/messages.component.html
@@ -1,5 +1,5 @@
 <main>
-    <div class="chat">  
+    <div #messageList class="chat">  
       <app-message *ngFor="let message of messages" 
       [message]="message"
       ></app-message>
