--- a/src/app/components/options/options.component.css
+++ b/src/app/components/options/options.component.css
@@ -1,7 +1,7 @@
 
 .op-container {
   display: flex;
-  justify-content: end;
+  /* justify-content: end; */
   align-items: flex-end;
   height: 100%;
 }
