--- a/src/app/components/options/options.component.css
+++ b/src/app/components/options/options.component.css
@@ -1,8 +1,8 @@
 
 .op-container {
   display: flex;
-  /* justify-content: end; */
-  align-items: flex-end;
+  justify-content: flex-end;
+  /* align-items: flex-end; */
   height: 100%;
 }
 #log-out {
