--- a/src/app/components/add-contact/add-contact.component.html
+++ b/src/app/components/add-contact/add-contact.component.html
@@ -1,14 +1,35 @@
 
-  <div class="add-contact-container">
+  <!-- <div class="add-contact-container">
     <h2>Add Contact</h2>
     <form #contactForm="ngForm" (ngSubmit)="onAddContact($event)">
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" id="name" name="name" [(ngModel)]="contact.name" required />
+        <input type="text" id="name" name="name" [(ngModel)]="contact.name" />
       </div>
       <div class="form-group">
         <label for="imageUrl">Image</label>
-        <input type="text" id="imageUrl" name="imageUrl" [(ngModel)]="contact.imageUrl" />
+        <input type="text" id="imageUrl" name="imageUrl" [(ngModel)]="contact.imageUrl"/>
+      </div>
+      <button type="submit">Add Contact</button>
+    </form>
+  </div> -->
+
+  <div class="add-contact-container">
+    <h2>Add Contact</h2>
+    <form [formGroup]="contactGroup" (ngSubmit)="contactGroup.valid && onAddContact(contactGroup)">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" formControlName="name"/>
+        <div class="error">
+          <span *ngIf="(name?.touched || name?.dirty) && name?.invalid">Name is Required.</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="imageUrl">Image</label>
+        <input type="text" formControlName="imageUrl"/>
+        <div class="error">
+          <span *ngIf="(imageUrl?.touched || imageUrl?.dirty) && imageUrl?.invalid">Invalid image format.</span>
+        </div>
       </div>
       <button type="submit">Add Contact</button>
     </form>
