--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -22,6 +22,16 @@ h2{
   }
 h3{
     font-size:12px;
-    color:#7e818a;
+    /* color:#7e818a; */
     font-weight:normal;
   }
+.status {
+}
+
+.offline{
+  color: rgb(233, 13, 13)
+}
+
+.online{
+  color: rgb(19, 199, 19)
+}
