--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,8 +2,8 @@
     <img src="{{ contact.imageUrl }}" alt="">
     <div class="contact-det">
         <h2>{{ contact.name }}</h2>
-        <h3>
-            <span class="status orange"></span>
+        <h3 class="status {{ contact.status }}">
+            <!-- <span class="status {{ contact.status }}"></span> -->
             {{ contact.status }}
         </h3>
     </div>
