--- a/src/app/components/messages/messages.component.html
+++ b/src/app/components/messages/messages.component.html
@@ -6,7 +6,7 @@
     </div>
     <footer>
       <app-text-box
-        *ngIf="activatedContact.id"
+        *ngIf="activatedChat.id"
         (messageSent)="handleMessage($event)"
       ></app-text-box>
     </footer>
