--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
-    <img src="{{ activatedContact.imageUrl }}" alt="">
-    <div *ngIf="activatedContact.name.length != 0">
-      <h2>Chat with {{ activatedContact.name }}</h2>
+    <img src="{{ activatedChat.imageUrl }}" alt="">
+    <div *ngIf="activatedChat.name.length != 0">
+      <h2>Chat with {{ activatedChat.name }}</h2>
     </div>
 </header>
